@@ -1,4 +1,4 @@
-<!-- start of $Id: html_inbox.php,v 1.46 2004/09/28 16:54:54 goddess_skuld Exp $ -->
+<!-- start of $Id: html_inbox.php,v 1.47 2005/08/01 08:11:16 goddess_skuld Exp $ -->
 
 <?php
   if ($conf->have_ucb_pop_server || $pop->is_imap()) {
@@ -19,6 +19,9 @@
                           <?php echo $tmp['attach']; ?>
                         </td>
                         <td class="<?php echo $inbox_class ?>">
+                          <?php echo substr(htmlspecialchars(display_address($tmp['to'])), 0, 55); ?>
+                        </td>
+                        <td class="<?php echo $inbox_class ?>">
                         <?php if(isset($user_prefs->seperate_msg_win) && $user_prefs->seperate_msg_win) { ?>
                           <a href="javascript:void(0);" onclick="window.open('<?php echo $_SERVER['PHP_SELF'] ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;verbose=0&amp;');" title="<?php echo $tmp['subject']? htmlspecialchars($tmp['subject']) : $html_nosubject; ?>"><?php echo $tmp['subject']? substr(htmlspecialchars($tmp['subject']), 0, 55) : $html_nosubject; ?></a>
                         <?php } else { ?>
@@ -33,4 +36,4 @@
                           <?php echo $tmp['size'] ?> <?php echo $html_kb ?>
                         </td>
                       </tr>
-<!-- end of $Id: html_inbox.php,v 1.46 2004/09/28 16:54:54 goddess_skuld Exp $ -->
+<!-- end of $Id: html_inbox.php,v 1.47 2005/08/01 08:11:16 goddess_skuld Exp $ -->
